# foreblocks

./: .ariadneignore  .clang-format  .clang-format-ignore  .clangd  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  DOCSTRING_STYLE.md  MANIFEST.in  README.md  build_studio_web.sh  darts_multifidelity_example.ipynb  examples.ipynb  foretuner.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  simplex.ipynb  sinal.ipynb  test_atomic.py  test_tilelang_fwd_comp.py  test_tilelang_fwd_full.py  test_tilelang_gemm.py  tmp_drop_scheduler.py  ts_cf.ipynb
darts/: __init__.py  config.py  scoring.py  trainer.py  transformer_diagram.py
docs/: changelog.md  cheatsheet.md  custom_blocks.md  darts.md  evaluation.md  fourier.md  getting-started.md  hybrid-mamba.md  index.html  index.md  kan.md  moe-advanced.md  moe.md  overview.md  preprocessor.md  transformer-advanced.md  transformer.md  troubleshooting.md  uncertainty.md  upgrade-guide.md  webui.md
examples/: adaptive_mrmr_demo.py  autofilter_darts_example.ipynb  bayesian_blocks_validation.ipynb  dart.py  darts.py  darts_multifidelity_example.ipynb  explainability.ipynb  fourier_blocks.ipynb  generate_mock_data.py  graph_btnf_synthetic_demo.ipynb  graph_forecasting_model_trainer_synthetic.ipynb  nha_block.ipynb  nha_block.py  other_blocks.ipynb  pipeline.ipynb  preprocessing.ipynb  seq2seq.ipynb  seq2seq.qmd  test_auto_filter.ipynb  tggc_modern_synthetic_demo.ipynb  times_block.ipynb  times_block.py  train_with_tracker.py  transformer_tuner_synthetic.ipynb  ts_handler_autoprocessing_demo.ipynb
foreblocks/: CLAUDE.md  __init__.py  att.py  aux.py  blocks.py  config.py  core.py  core_extend.py  discovery.py  embeddings.py  enc_dec.py  fengine.py  head_back.py  head_helper.py  head_new.py  node_spec.py  pipeline.py  preprocessing.py  rl.py  studio_server.py  transformer.py  transformer_att.py  transformer_aux.py  ts_fengine.py  ts_fengine_gan.py  ts_fengine_vae.py  utils.py  utils_back  utils_old.py  vsgd.py
foretools/: __init__.py  conversor.ipynb  fenginner.py  foreminer.md  foreminer.py  vmd.py  vmd_helper.py
foretools/foretree/: CMakeLists.txt  boosting.ipynb  boosting.py  boosting_aux.py  boosting_bin.py  boosting_bin_reg.py  boosting_leaf.py  boosting_loss.py  boosting_miss.py  boosting_tree.py  helper.hpp  lpv.ipynb  nn.py  node.py  plan.py  shap.py  splits.py  unified_tree.cpp
foretools/foretree/doc/: treeshap.ipynb
mltracker/: mltracker.db
mltracker_data/: mltracker.db
scheduling/: README.md  __main__.py  graph_converter.py  original.py  train.py
scripts/: build_studio_web.sh  debug_phase3_darts.py  generate_results_tex.py  run_dataset_fastphase3_n_times.sh  top_hidro_runs_by_mse.py  update_web_version.py
src/tree/: .clangd  .gitignore  CMakeLists.txt  README.md  bench_sota_options.py  bench_unifiedtree.py  foretree_export.py  test_headers.cpp
src/tree/docs/: structure.md
src/tree/include/foretree/: all.hpp  core.hpp  ensemble.hpp  tree.hpp
src/tree/include/foretree/core/: binning_strategies.hpp  data_binner.hpp  dataset.hpp  gradient_hist_system.hpp  histogram_kernel.hpp  histogram_primitives.hpp  ordered_categorical.hpp  parallel_executor.hpp
src/tree/include/foretree/ensemble/: forest.hpp
src/tree/include/foretree/gpu/: cuda_histogram.hpp  gpu_prediction.hpp  neural_leaf.hpp
src/tree/include/foretree/split/: split_aux.hpp  split_engine.hpp  split_finder.hpp  split_helpers.hpp
src/tree/include/foretree/tree/: growth_policy.hpp  neural.hpp  packed_tree.hpp  packed_tree_builder.hpp  row_partitioner.hpp  training_context.hpp  tree_types.hpp  unified_tree.hpp
src/tree/src/: foreforest.cpp  foretree_pybind.cpp
src/tree/src/gpu/: cuda_histogram.cu  gpu_prediction.cu  neural_leaf.cu
src/tree/src/pybind/: foreforest.cpp  foretree.cpp
src/tree/tests/: bench_constraints.py  bench_sota_options.py  bench_unifiedtree.py  test_cuda_histogram.cu  test_dataset_representation.cpp  test_feature_major_histogram.cpp  test_growth_policy.cpp  test_histogram_primitives.cpp  test_ordered_categorical.cpp  test_packed_tree.cpp  test_pair_interaction_split.cpp  test_parallel_tree_paths.cpp  test_row_partitioner.cpp  test_split_active_features.cpp
tests/: test_anomaly_detector.py  test_anomaly_sota.py  test_arima_forecast.py  test_attention_matching_compaction.py  test_attention_public_api.py  test_auto_filter.py  test_autocor_att.py  test_bb_bins.py  test_conformal_coverage.py  test_core_model.py  test_csv_source.py  test_custom_raven.py  test_darts_architecture_step.py  test_darts_architecture_transfer.py  test_darts_edge_regularization.py  test_darts_engine_variants.py  test_darts_improvements.py  test_darts_legacy_removal.py  test_darts_training_loop.py  test_darts_zero_cost_metrics.py  test_dilated_attention_variant.py  test_dwt_att.py  test_embeddings.py  test_emd_like_core_regressions.py  test_emd_mode_processor_fft.py  test_foreminer_sota.py  test_frequency_att.py  test_gated_delta_chunk.py  test_gated_deltanet2.py  test_gateskip.py  test_graph_btnf_mtgnn.py  test_graph_btnf_sparse_layers.py  test_graph_btnf_tggc.py  test_head_composer.py  test_head_graph.py  test_hybrid_mamba.py  test_kan_model.py  test_kan_poly.py  test_kimi_att_chunk.py  (+28 more)
tree/: .gitignore  CMakeLists.txt  bench_constraints.py  bench_sota_options.py  bench_unifiedtree.py  foreforest2.ipynb  foreforest_test.ipynb  foretree_modes_test.ipynb  ltboost.ipynb
tree/build-cuda/: CMakeCache.txt
tree/build20/: CMakeCache.txt
tree/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
tree/catboost_info/learn/: events.out.tfevents
tree/include/foretree/: split.hpp
tree/include/foretree/core/: binning_strategies.hpp  data_binner.hpp  gradient_hist_system.hpp  histogram_primitives.hpp
tree/include/foretree/ensemble/: forest.hpp
tree/include/foretree/split/: split_aux.hpp  split_finder.hpp  split_helpers.hpp
tree/include/foretree/tree/: tree_types.hpp  unified_tree.hpp
tree/include/tree/: neural_odst.py
tree/src/: foreforest.cpp  foretree_pybind.cpp  work_forest.cpp
(+1992 files in other folders)
