[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foreblocks"
version = "0.1.41"
description = "Modular Time Series Forecasting Library"
authors = [{ name = "Laio Seman", email = "laioseman@gmail.com" }]

readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "time series",
  "forecasting",
  "deep learning",
  "transformer",
  "lstm",
  "pytorch",
  "nas",
  "darts",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ── Core runtime dependencies ─────────────────────────────────────────────
# Keep the default install focused on the modeling stack.
# Heavier scientific, preprocessing, tracking, and analysis features live in extras.
dependencies = [
  "torch>=2.0",  # SDPBackend, autocast, compile — 2.x API used throughout
  "numpy>=1.24",
  "einops>=0.6", # tf/embeddings/rotary.py, third_party/flash_softpick_attn
  "tqdm>=4.64",  # training loops, preprocessing progress bars
]

[project.optional-dependencies]
# ── Shared feature bundles ────────────────────────────────────────────────
plotting = ["matplotlib>=3.6"]

scientific = [
  "pandas>=1.5",       # CSV loader, foretools, DARTS analyzer
  "scipy>=1.10",       # signal processing, interpolation, statistical routines
  "numba>=0.57",       # ts_handler/outlier.py and foretools accelerators
  "scikit-learn>=1.2", # preprocessing, feature engineering, metrics
  "joblib>=1.3",       # parallel preprocessing and foretools helpers
  "statsmodels>=0.14", # preprocessing diagnostics and filters
  "tabulate>=0.9",     # preprocessing summary tables
]

# ── Time-series preprocessing / handlers ─────────────────────────────────
preprocessing = ["foreblocks[scientific,plotting]"]

# ── DARTS search / training / analysis helpers ──────────────────────────
darts = [
  "foreblocks[plotting,scientific]",
  "seaborn>=0.13",                   # foreblocks/darts/evaluation/analyzer.py
]

# ── mltracker local + API clients / TUI ──────────────────────────────────
mltracker = [
  "requests>=2.31",
  "chardet<6",
  "fastapi>=0.100",
  "uvicorn>=0.22",
  "pydantic>=2.0",
  "textual>=0.70",
]

studio = []

# ── foretools extras ──────────────────────────────────────────────────────
vmd = [
  "foreblocks[scientific]",
  "pyfftw>=0.13",           # decomposition backend (foretools/emd_like/common.py)
  "optuna>=3.0",            # VMD hyperparameter search
]

# ── Wavelet / symbolic backends ──────────────────────────────────────────
wavelets = [
  "scipy>=1.10",
  "sympy>=1.12",
  "PyWavelets>=1.4",       # tf/attention/dwt_att.py (try/except guarded)
  "pytorch_wavelets>=1.3", # blocks/wavelets.py
]

# ── Benchmarking against external baselines ──────────────────────────────
benchmark = [
  "foreblocks[scientific,plotting]",
  "neuralforecast>=2.0",
  "openpyxl>=3.1",
]

# ── Dataset mining / reporting ────────────────────────────────────────────
foreminer = [
  "foreblocks[scientific,plotting]",
  "ruptures>=1.1",
  "networkx>=3.0",
  "seaborn>=0.13",
]

# ── Full install ──────────────────────────────────────────────────────────
all = [
  "foreblocks[preprocessing,darts,mltracker,studio,vmd,wavelets,benchmark,foreminer]",
]

# ── Development tools (not packaged) ─────────────────────────────────────
dev = ["pytest>=7.0", "ipykernel>=6.0", "ruff", "basedpyright"]

# Optional integration with flash-linear-attention, either installed from PyPI
# or provided by the git submodule at third_party/flash-linear-attention.
fla = [
  "flash-linear-attention>=0.5.0",
  "triton>=3.3",
  "transformers>=4.45.0",
  "einops>=0.6",
]

[project.urls]
Homepage = "https://github.com/lseman/foreblocks"
Repository = "https://github.com/lseman/foreblocks"

[project.scripts]
mltracker-tui = "mltracker.mltracker_tui:main"
foreblocks-studio = "foreblocks.studio_server:main"

[tool.setuptools]
include-package-data = false

# Studio frontend assets now live at apps/webui/dist (served by foreblocks.studio_server
# from a source checkout). They are no longer bundled as foreblocks package-data, so
# `foreblocks-studio` requires the repo (not a bare wheel install).

[tool.setuptools.packages.find]
where = ["src"]
include = [
  "foreblocks",
  "foreblocks.*",
  "foretools",
  "foretools.*",
  "darts",
  "darts.*",
]


[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313", "py314", "py315"]

[tool.isort]
profile = "black"
line_length = 88
force_single_line = false
lines_after_imports = 2
float_to_top = true
combine_as_imports = true
skip_gitignore = true
filter_files = true

[tool.pyrefly]
project-includes = ["**/*.py*", "**/*.ipynb"]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
